# ai_henry_m2_faq_chatbot

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
data/: faq_document.txt
outputs/: sample_queries.json
src/: __init__.py  build_index.py  query.py
