[project]
name = "ai-engineering-henry"
version = "0.1.0"
description = "Entorno unificado para el curso de AI Engineering - Henry"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.60.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "langchain-tavily>=0.2.0",
  "langgraph>=0.4.0",
  "langgraph-checkpoint>=4.0.0",
  "tavily-python>=0.5.0",
  "graphviz>=0.20.1",
  "pillow>=10.0.0",
  "python-dotenv>=1.0.1",
  "nbformat>=5.10.4",
  "nbclient>=0.10.2",
  "nbconvert>=7.16.0",
  "ipykernel>=6.29.5",
  "pydantic>=2.8.2",
  "chromadb>=0.5.0",
  "tiktoken>=0.7.0",
  "faiss-cpu>=1.7.4",
  "huggingface-hub>=0.25.0",
  "transformers>=4.43.0",
  "sentence-transformers>=3.0.0",
  "datasets>=4.5.0",
  "rank-bm25>=0.2.2",
  "openai-agents>=0.0.9",
  "nest-asyncio>=1.6.0",
  "typer>=0.12.5",
  "rich>=13.7.1",
  "tenacity>=8.2.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-mock>=3.12.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.8.0"
]

[project.scripts]
llmops-run = "llmops.main:app"

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "03-agents/LLMops/src"}

[tool.setuptools.packages.find]
where = ["03-agents/LLMops/src"]

[tool.pytest.ini_options]
testpaths = [
    "01_introduction/02_ai_engineering/tests",
    "01_introduction/01_python_software_engineering/tests",
    "06_project/tests",
    "03-agents/LLMops/tests",
    "03-agents/tests"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
]
markers = [
    "integration: integration tests that may call external APIs",
    "unit: fast unit tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
