[project]
name = "ai-henry-m2-faq-chatbot"
version = "0.1.0"
description = "FAQ Chatbot con RAG (Retrieval-Augmented Generation) para soporte de empresa HR SaaS"
authors = [{name = "Equipo AI Engineering", email = "ai-team@henry.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy>=2.1.0",
    "scikit-learn>=1.5.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "openai>=1.54.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ai-henry-m2-faq-chatbot"
Documentation = "https://github.com/your-org/ai-henry-m2-faq-chatbot#readme"
Repository = "https://github.com/your-org/ai-henry-m2-faq-chatbot"

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
markers = ["unit", "integration"]
